desenvolvido falta mobile

--- a/index.html
+++ b/index.html
@@ -3,32 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./assets/styles/index.css">
   <title>Frontend Mentor | Blog preview card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
-  Learning
-
-  Published 21 Dec 2023
-
-  HTML & CSS foundations
-
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <section>
+    <div id="container_information">
+      <div id="image_yellow">
+        <img src="./assets/images/illustration-article.svg" alt="">
+      </div>
+      <strong>
+        <h2>Learning</h2>
+      </strong>
+      <p>Published 21 Dec 2023</p>
+      <strong>
+        <h1>HTML & CSS foundations</h1>
+      </strong>
+      <p>
+        These languages are the backbone of every website, defining structure, content, and presentation.
+      </p>
+      <div id="image_avatar">
+        <img  src="./assets/images/image-avatar.webp" alt="greg">Greg Hooper
+      </div>
+      <div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">Lucas Fernando</a>.
+      </div>
+    </div>
+  </section>
 </body>
 </html>
