--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="./assets/styles/index.css">
+  <link rel="stylesheet" href="./assets/styles/media.css">
   <title>Frontend Mentor | Blog preview card</title>
 </head>
 <body>
@@ -28,7 +29,7 @@
         <img  src="./assets/images/image-avatar.webp" alt="greg">Greg Hooper
       </div>
       <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.<br>
         Coded by <a href="#">Lucas Fernando</a>.
       </div>
     </div>
